Fix Firefox images being too large. Might have impact on larger screens. Add Compass. Add Hover. Hover not working as smoothly as expected.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,10 +15,12 @@
  *= require foundation_and_overrides
 
  */
+ /* @import "compass"; */
 
 
 .showtitle.image {
   display: inline-block;
+  max-width: 1000px;
 }
 
 .actions {
@@ -92,12 +94,24 @@
   display: inline-flex;
   margin-bottom: 20px;
   transition: all .15s ease-in-out;
-
+  display: inline-block;
+/*   vertical-align: middle;
+-webkit-transform: translateZ(0);
+transform: translateZ(0);
+box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+-webkit-backface-visibility: hidden;
+backface-visibility: hidden;
+-moz-osx-font-smoothing: grayscale;
+-webkit-transition-property: transform;
+transition-property: transform;
+-webkit-transition-duration: all .15s ease-in-out;
+transition-duration: all .15s ease-in-out; */
 }
 
 .design-display :hover{
-  transform: scale(1.1);
   opacity: .8;
+  -webkit-transform: scale(1.11);
+  transform: scale(1.11);
   font-family: $smallfont;
 
 }
@@ -132,14 +146,50 @@
     background: $maincolor !important;
     font-family: $smallfont;
     font-size: .85rem;
-    transition: all .3s ease-in-out;
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    overflow: hidden;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: color, background-color;
+    transition-property: color, background-color;
     line-height: 2.06rem !important;
 
 }
 
+
+.hvr-fade {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
+  background-color: #2098d1;
+  color: white;
+}
+
+
+
+
 .top-bar-section li a:not(.button):hover {
     background: $buttonhovercolor !important;
-    transition: all .3s ease-in-out;
+    /* transition: all .3s ease-in-out; */
 }
 
 
